# JSONCPP

./: CMakeLists.txt  README.md
.github/workflows/: build-and-run-tests.yml
include/: json.h  json_assert.h  json_beautifier.h  json_definitions.h  json_minifier.h  json_visitor.h
samples/beautifier/: CMakeLists.txt
samples/response-parser/: CMakeLists.txt  main.cpp
src/: json.cpp  json_beautifier.cpp  json_minifier.cpp  json_parser.cpp  json_parser.h  json_tokeniser.h
tests/integration/: json_malformed_json_tests.cpp  test_utils.h
tests/unit/: json_tokeniser_tests.cpp
